--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "scripts": {
+    "dev:linux": "sass -w scss:css & php -S localhost:80"  },
   "dependencies": {
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.11.3"
