--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
+  "scripts": {
+    "dev:win": "start /b sass -w scss:css && php -S localhost:80"
+  },
   "dependencies": {
-    "bootstrap": "^5.3.3",
+    "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.11.3"
   }
 }
