--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
   "scripts": {
-<<<<<<< HEAD
-    "dev:win": "start /b sass -w scss:css && php -S localhost:80"
-=======
-    "dev:linux": "sass -w scss:css & php -S localhost:80"
->>>>>>> balbino
+    "dev:win": "start /b sass -w scss:css && php -S localhost:80",
+    "dev:linux": "sass -w scss:css --load-path=node_modules & php -S localhost:70"
   },
   "dependencies": {
     "bootstrap": "^5.3.8",
